--- a/edoardo/ouija/pyproject.toml
+++ b/edoardo/ouija/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "numpy (>=2.2.3,<3.0.0)"
+    "numpy (>=2.2.3,<3.0.0)",
+    "tqdm (>=4.67.1,<5.0.0)"
 ]
 
 
